<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright (C) 2010  Alex Avance

This program is free software; you can redistribute it and/or
modify it under the terms of the GNU General Public License
as published by the Free Software Foundation; either version 2
of the License, or (at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-
1307, USA.
-->

<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">xkcd</string>
    <string name="no_comics">No comics have been selected.</string>
    <string name="seperator">.&#160;</string>
    <string name="space">&#160;</string>
    <string name="updating_comics">Updating comic list...</string>
    <string name="update_success">Successfully updated comic list</string>
    <string name="update_failure">Failed to update comic list</string>
    <string name="update_error">Fatal error with URL!!! Please inform the developer.</string>
    <string name="update_cancelled">Cancelled list update</string>
    
    <string name="menu_view">View</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_xkcd">xkcd.com</string>
    <string name="menu_goto">Go to xkcd.com</string>
    <string name="menu_download">Download</string>
    <string name="menu_downloadall">Download All</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_clearall">Clear All</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_markfavorite">Mark as favorite</string>
    <string name="menu_unfavorite">Unfavorite</string>
    <string name="menu_markunfavorite">Unmark as favorite</string>
    <string name="menu_hover">Hover Text</string>
    <string name="menu_random">Random Comic</string>
    <string name="menu_online">View Online</string>
    
    <string name="button_next">&#160;&gt;&#160;</string>
    <string name="button_prev">&#160;&lt;&#160;</string>
    <string name="button_go">Go</string>
</resources>
