<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright (C) 2010  Alex Avance

This program is free software; you can redistribute it and/or
modify it under the terms of the GNU General Public License
as published by the Free Software Foundation; either version 2
of the License, or (at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-
1307, USA.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item android:id="@+id/menu_view"
      android:title="@string/menu_view"/>
      
  <item android:id="@+id/menu_download"
      android:title="@string/menu_download"/>
      
  <item android:id="@+id/menu_clear"
      android:title="@string/menu_clear"/>
      
  <item android:id="@+id/menu_favorite"
      android:title="@string/menu_markfavorite"
      android:titleCondensed="@string/menu_favorite"/>
      
  <item android:id="@+id/menu_unfavorite"
      android:title="@string/menu_markunfavorite"
      android:titleCondensed="@string/menu_unfavorite"/>
</menu>